--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <canvas id="canvas" width="500" height="400">
     Your browser does not support the HTML5 canvas tag.
 </canvas>
+<script type="text/javascript" src="./loader.js"></script>
 </body>
 </html>
