--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Loader</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<canvas id="canvas" width="500" height="400">
-    Your browser does not support the HTML5 canvas tag.
-</canvas>
+<div class="canvas">
+    <canvas id="canvas" width="800" height="800">
+        Your browser does not support the HTML5 canvas tag.
+    </canvas>
+</div>
+
 <script type="text/javascript" src="./loader.js"></script>
 </body>
 </html>
