--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="canvas">
-    <canvas id="canvas" width="800" height="800">
+    <canvas id="canvas">
         Your browser does not support the HTML5 canvas tag.
     </canvas>
 </div>
